<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core_feature.presentation.home.HomeActivity"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/bg_page">
    <TextView
        style="@style/textColor.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Greeting"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/greeting"
        />

    <TextView
        android:id="@+id/textView"
        style="@style/textColor.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviewer"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <ImageView
        android:id="@+id/btn_favorite_layout"
        style="@style/menuBackGlassmorph"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/bg_glassmorph_primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/btn_favorite"
        style="@style/menuBackGlassmorph"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/back_button"
        android:padding="6dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_home"
            style="@style/TabsLayoutTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            app:tabIndicator="@drawable/tabs_indicator"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="@color/primary_color_29"
            app:tabIndicatorGravity="stretch"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/text_color"
            app:tabTextAppearance="@style/TabsLayoutTextAppearance" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="2dp"
            android:src="@drawable/bg_liner"
            tools:ignore="ContentDescription" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>