<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_activity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_poster_detail"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="center"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/bg_gradient_black_to_transparent"
                app:layout_constraintBottom_toBottomOf="@+id/movie_poster_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/btn_back_layout"
                style="@style/menuBackGlassmorph"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/bg_glassmorph_primary_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"/>

            <ImageButton
                android:id="@+id/btn_back"
                style="@style/menuBackGlassmorph"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/back_button"
                android:padding="6dp"
                android:src="@drawable/ic_chevron_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_watch"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_play"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                android:background="@drawable/bg_button_watch"
                android:layout_marginTop="180dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tx_watch"
                style="@style/textColor.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_watch"
                android:layout_marginVertical="4dp"/>

            <TextView
                android:id="@+id/movie_title_detail"
                style="@style/textColor.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tx_watch"
                android:textSize="24sp"
                android:layout_marginTop="40dp"/>

            <TextView
                android:id="@+id/movie_tagline"
                style="@style/textColor.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingHorizontal="16dp"
                android:layout_marginVertical="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_detail"
                android:textSize="12sp"/>

            <RelativeLayout
                android:id="@+id/rl_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_tagline">

                <TextView
                    android:id="@+id/movie_release_date"
                    style="@style/textColor.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_text_primary"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/movie_production_country"
                    style="@style/textColor.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_toStartOf="@+id/movie_release_date"
                    android:background="@drawable/bg_text_primary"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textAlignment="center"
                    android:textSize="12sp"

                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/movie_user_score"
                    style="@style/textColor.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_toEndOf="@+id/movie_release_date"
                    android:background="@drawable/bg_text_primary"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/movie_category"
                style="@style/textColor.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_1"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_lable_overview"
                style="@style/textColor.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textAlignment="textStart"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_category"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/movie_overview"
                style="@style/textColor.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:paddingHorizontal="16dp"
                android:layout_marginVertical="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lable_overview"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_lable_companies"
                style="@style/textColor.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/companies"
                android:textAlignment="textStart"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_overview"
                android:textSize="18sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_companies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="6dp"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_lable_companies"
                tools:itemCount="5"
                tools:listitem="@layout/items_companies"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_content_desc"
        style="@style/fabFavorite"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>